# httpy

./: .gitignore  README.md  main.py  pyproject.toml
docs/: take_screenshots.py
examples/: demo_api_usage.py
projects/my_api_project/: project.json
projects/my_api_project/templates/: get_user_info.json  get_user_info_details.json
src/httpy/: __init__.py  __main__.py
src/httpy/core/: __init__.py  environment.py  project.py  request.py  request_handler.py  response.py  template.py
src/httpy/io/: __init__.py
src/httpy/models/: __init__.py
src/httpy/tui/: __init__.py  app.py  app.tcss
src/httpy/tui/screens/: new_environment.py  new_project.py  new_template.py
src/httpy/tui/widgets/: environment_editor.py  response_history.py  response_viewer.py  sidebar.py  template_editor.py
src/httpy/utils/: __init__.py
tests/: test_templates.py
tests/environment_providers/: test_project.py  test_templates.py
